# pixie_stitch

./: .gitignore  Cargo.toml  README.md
launcher/: Cargo.toml
launcher/src/: main_launcher.rs
src/: color_mapping.rs  core.rs  image.rs  main.rs  stitch_images.rs
src/core/: platform.rs
src/image/: bitmap.rs  color.rs  font.rs  grid.rs
