[package]
name = "launcher"
version = "3.0.1"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"
default-run = "launcher"

[[bin]]
path = "src/main.rs"
name = "launcher"

[dependencies]
gif = "0.10.0"
indexmap = "1.6.1"
rayon = "1.5.0"
color-art = "0.3"
log = "0.4.11"
serde = "1.0.118"
serde_json ="1.0.60"
serde_derive = "1.0.118"
bincode = "1.2.1"
walkdir = "2.3.1"
glob = "0.3.0"
easy_process = "0.2.0"
directories = "2.0.2"
fern = "0.6.0"
png = "0.16.8"
rect_packer = "0.2.1"
rusttype = "0.9.2"
hsl = "0.1.1"
textwrap = "0.13.2"
num-traits = "0.2.14"
ezing = "0.2.1"
oorandom = "11.1.3"